--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
           submodules: recursive
       - uses: actions/checkout@v4
         with:
-          repository: darknao/zmk
+          repository: keithm999/zmk
           ref: darknao/rgb-dts
           path: src
       - uses: cachix/install-nix-action@v25
